--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.120.5",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/fiber": "^8.17.14",
+    "framer-motion-3d": "^12.4.1",
+    "motion": "^12.4.1",
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
