--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "rules": {
     "no-console": "warn",
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "react/prop-types": "off",
     "react/no-unescaped-entities": "off",
     "prettier/prettier": [
