--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "no-console": "warn",
+    "no-console": ["warn", { "allow": ["debug"] }],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "react/prop-types": "off",
