--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leva": "^0.10.0",
     "motion": "^12.4.1",
     "next": "14.2.22",
+    "playroomkit": "^0.0.87",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.172.0"
