--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "r3f-test",
+  "name": "laboratory",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "codewitchio",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,32 +13,35 @@
   "dependencies": {
     "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^9.120.5",
-    "@react-three/fiber": "^8.17.14",
-    "framer-motion-3d": "^12.4.1",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
+    "@react-three/postprocessing": "^3.0.4",
+    "classnames": "^2.5.1",
+    "framer-motion-3d": "^12.4.7",
     "leva": "^0.10.0",
-    "motion": "^12.4.1",
-    "next": "14.2.22",
-    "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.172.0"
+    "motion": "^12.4.7",
+    "next": "^15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "three": "^0.173.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/three": "^0.171.0",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@tsconfig/next": "^2.0.3",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/three": "^0.173.0",
     "daisyui": "5.0.0-beta.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.22",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
-    "postcss": "^8",
-    "prettier": "3.4.2",
+    "postcss": "^8.5.3",
+    "prettier": "3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.7",
+    "typescript": "^5.7.3"
   }
 }
