--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "classnames": "^2.5.1",
     "framer-motion-3d": "^12.4.7",
+    "jotai": "^2.12.1",
     "leva": "^0.10.0",
     "motion": "^12.4.7",
     "next": "^15.1.7",
